# document_recognizer

./: README.MD  pyproject.toml
document_recognition/: __init__.py  async_client.py  sync_client.py  template.py  utils.py
document_recognition/backends/: __init__.py  base.py
document_recognition/backends/asynchronous/: __init__.py
document_recognition/backends/synchronous/: google_vision_backend.py
document_recognition/entities/: drive_license.py  passport.py
document_recognition/photo_pre_processors/: base.py
document_recognition/photo_pre_processors/synchronous/: homography_cv2_.py
document_recognition/recognizers/: base.py
document_recognition/recognizers/synchronous/: driver_license_recognizer.py  passport_recognizer.py
examples/: async_example.py  basic_usage.py
tests/: conftest.py  mocked_sync_client.py
tests/data/: template.xml
tests/unit/: test_parse_entity.py  test_photo_pre_processors.py  test_template.py
